--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 # version format
-version: 1.7.2.{build}
+version: 0.2.1.{build}
 
 os: Visual Studio 2017
 
@@ -24,7 +24,7 @@ install:
 
 assembly_info:
   patch: true
-  file: 'source\nuPickers**\AssemblyInfo.*'
+  file: 'source\Novicell.Examine.ElasticSearch**\AssemblyInfo.*'
   assembly_version: '$(appveyor_file_version)'
   assembly_file_version: '$(appveyor_file_version)'
   assembly_informational_version: '$(mssemver)'
