--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 # version format
 version: 0.2.1.{build}
 
-os: Visual Studio 2017
+image: Visual Studio 2019
 
 cache:
   - packages -> src\**\packages.config              # preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
