--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,9 +47,10 @@ deploy:
   server: https://nuget.novicell.london/nuget
   api_key:
     secure: A/xkn1/+F9+HTwGVLEPRFDwDSDMZLJ2zl1AnqsKOoE9tlYio2wrFBUN9BJkZw5aTmNsKy7Yjn6lbS61KSnuXHQ==
-  artifact: /.*\.nupkg/
+  skip_symbols: true
+  artifact: .*\.nupkg
 - provider: GitHub
-  tag: GH Pre-Release
+  tag: GH Release
   auth_token:
     secure: CnPbSuXiCJXBzQur6JGaYPrx/HCnLJljBT3hpyGrBlxK7vTKPWhnG+dlr2H/4f2Q
   repository: Novicell/Novicell.Examine.ElasticSearch
@@ -63,6 +64,12 @@ deploy:
   auth_token:
     secure: CnPbSuXiCJXBzQur6JGaYPrx/HCnLJljBT3hpyGrBlxK7vTKPWhnG+dlr2H/4f2Q
   repository: Novicell/Novicell.Examine.ElasticSearch
+  on:
+    branch: master
+- provider: NuGet
+  api_key:
+    secure: GUY4h/aeCYTPp8yQDoKS/aqK3PrQzNr8pVMU7zsZ2bSXxPul9WdsaT6as+2ZoEDH
+  skip_symbols: true
   on:
     branch: master
 notifications:
