--- a/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
+++ b/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
@@ -324,6 +324,7 @@
       <Compile Include="Populators\MediaIndexPopulator.cs" />
       <Compile Include="Populators\MemberIndexPopulator.cs" />
       <Compile Include="Populators\PublishedContentIndexPopulator.cs" />
+      <Compile Include="Properties\AssemblyInfo.cs" />
       <Compile Include="Queries\ElasticSearchQuery.cs" />
       <Compile Include="Queries\LateBoundQuery.cs" />
     </ItemGroup>
