Expose onwriting event, reimplement arguments of Umbraco event, add possibility of using of prefix,

--- a/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
+++ b/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
@@ -309,6 +309,7 @@
       <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
+      <Compile Include="DocumentWritingEventArgs.cs" />
       <Compile Include="ElasticSearchBooleanOperation.cs" />
       <Compile Include="ElasticSearchExamineComponent.cs" />
       <Compile Include="ElasticSearchExamineComposer.cs" />
