--- a/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
@@ -44,11 +44,10 @@
         <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb">
             <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
         </Reference>
+        <Reference Include="System.Xml.Linq" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="DataServices\TestContentService.cs" />
-        <Compile Include="DataServices\TestDataService.cs" />
-        <Compile Include="DataServices\TestLogService.cs" />
         <Compile Include="IndexInitializer.cs" />
         <Compile Include="Index\LuceneIndexTests.cs" />
         <Compile Include="OrderedDictionaryTests.cs" />
