--- a/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
@@ -33,6 +33,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="ElasticsearchInside, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\elasticsearch-inside.6.6.1\lib\net461\ElasticsearchInside.dll</HintPath>
+        </Reference>
         <Reference Include="Examine, Version=1.0.1.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\packages\Examine.1.0.1\lib\net452\Examine.dll</HintPath>
           <Private>True</Private>
@@ -45,14 +48,15 @@
             <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
         </Reference>
         <Reference Include="System.Xml.Linq" />
+        <Reference Include="Umbraco.Core, Version=8.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\packages\UmbracoCms.Core.8.1.2\lib\net472\Umbraco.Core.dll</HintPath>
+        </Reference>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="DataServices\TestContentService.cs" />
         <Compile Include="IndexInitializer.cs" />
         <Compile Include="Index\LuceneIndexTests.cs" />
-        <Compile Include="OrderedDictionaryTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="RandomIdRAMDirectory.cs" />
         <Compile Include="Search\DataTypeTests.cs" />
         <Compile Include="Search\FluentApiTests.cs" />
         <Compile Include="Search\HighlightResultsTest.cs" />
