--- a/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
@@ -64,7 +64,7 @@
         <Compile Include="Search\StringTests.cs" />
         <Compile Include="SimpleDataProviderTest.cs" />
         <Compile Include="TestHelper.cs" />
-        <Compile Include="TestIndex.cs" />
+        <Compile Include="TestBaseIndex.cs" />
         <Compile Include="UmbracoExamine\IndexTypes.cs" />
     </ItemGroup>
     <ItemGroup>
