--- a/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
+++ b/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
@@ -320,8 +320,8 @@
       <Compile Include="EventArgs\DocumentWritingEventArgs.cs" />
       <Compile Include="Helpers\ElasticHelpers.cs" />
       <Compile Include="Indexers\ContentElasticSearchIndex.cs" />
+      <Compile Include="Indexers\ElasticSearchUmbracoIndex.cs" />
       <Compile Include="Indexers\ElasticSearchBaseIndex.cs" />
-      <Compile Include="Indexers\ElasticSearchIndex.cs" />
       <Compile Include="Indexers\MemberElasticSearchIndex.cs" />
       <Compile Include="Model\Document.cs" />
       <Compile Include="Populators\ContentIndexPopulator.cs" />
