--- a/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
@@ -64,7 +64,7 @@
     <ItemGroup>
         <Compile Include="DataServices\TestContentService.cs" />
         <Compile Include="IndexInitializer.cs" />
-        <Compile Include="Index\LuceneIndexTests.cs" />
+        <Compile Include="Index\ElasticIndexTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SimpleDataProviderTest.cs" />
         <Compile Include="TestHelper.cs" />
