cover fluent api in unit testing, fix chain queries,

--- a/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
+++ b/source/Novicell.Examine.ElasticSearch/Novicell.Examine.ElasticSearch.csproj
@@ -329,6 +329,7 @@
       <Compile Include="Populators\MemberIndexPopulator.cs" />
       <Compile Include="Populators\PublishedContentIndexPopulator.cs" />
       <Compile Include="Properties\AssemblyInfo.cs" />
+      <Compile Include="Queries\ElasticQuery.cs" />
       <Compile Include="Queries\ElasticSearchQuery.cs" />
       <Compile Include="Queries\LateBoundQuery.cs" />
     </ItemGroup>
