--- a/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
+++ b/source/Novicell.Examine.ElasticSearch.Tests/Novicell.Examine.ElasticSearch.Tests.csproj
@@ -45,6 +45,9 @@
           <HintPath>..\packages\Examine.1.0.1\lib\net452\Examine.dll</HintPath>
           <Private>True</Private>
         </Reference>
+        <Reference Include="Lucene.Net, Version=3.0.3.0, Culture=neutral, PublicKeyToken=85089178b9ac3181">
+          <HintPath>..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+        </Reference>
         <Reference Include="Nest, Version=6.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d">
           <HintPath>..\packages\NEST.6.7.0\lib\net461\Nest.dll</HintPath>
           <Private>True</Private>
@@ -66,6 +69,7 @@
         <Compile Include="IndexInitializer.cs" />
         <Compile Include="Index\ElasticIndexTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Search\FluentApiTests.cs" />
         <Compile Include="SimpleDataProviderTest.cs" />
         <Compile Include="TestHelper.cs" />
         <Compile Include="TestBaseIndex.cs" />
