--- a/source/Novicell.Examine.ElasticSearch/packages.config
+++ b/source/Novicell.Examine.ElasticSearch/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="8.0.0" targetFramework="net472" />
-  <package id="ClientDependency" version="1.9.7" targetFramework="net472" />
-  <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net472" />
+  <package id="ClientDependency" version="1.9.8" targetFramework="net472" />
+  <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="6.7.0" targetFramework="net472" />
   <package id="elasticsearch-inside" version="6.6.1" targetFramework="net472" />
@@ -56,6 +56,6 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.1.2" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.1.2" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.3.0-alpha.5578" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.3.0-alpha.5578" targetFramework="net472" />
 </packages>
