--- a/source/Novicell.Examine.ElasticSearch.Tests/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Tests/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Elasticsearch.Net" version="6.7.0" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.4.1" targetFramework="net472" />
   <package id="elasticsearch-inside" version="6.6.1" targetFramework="net472" />
   <package id="Examine" version="1.0.1" targetFramework="net472" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
-  <package id="NEST" version="6.7.0" targetFramework="net472" />
+  <package id="NEST" version="7.4.1" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
 </packages>
