--- a/source/Novicell.Examine.ElasticSearch/packages.config
+++ b/source/Novicell.Examine.ElasticSearch/packages.config
@@ -4,7 +4,7 @@
   <package id="ClientDependency" version="1.9.7" targetFramework="net472" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
-  <package id="Elasticsearch.Net" version="6.7.0" targetFramework="net472" />
+  <package id="Elasticsearch.Net" version="7.4.1" targetFramework="net472" />
   <package id="elasticsearch-inside" version="6.6.1" targetFramework="net472" />
   <package id="Examine" version="1.0.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
@@ -35,7 +35,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MiniProfiler" version="4.0.138" targetFramework="net472" />
   <package id="MiniProfiler.Shared" version="4.0.138" targetFramework="net472" />
-  <package id="NEST" version="6.7.0" targetFramework="net472" />
+  <package id="NEST" version="7.4.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="NPoco" version="3.9.4" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
@@ -52,7 +52,11 @@
   <package id="Serilog.Sinks.Map" version="1.0.0" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
   <package id="Superpower" version="2.0.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
