--- a/source/Novicell.Examine.ElasticSearch.Tests/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Tests/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Elasticsearch.Net" version="7.4.1" targetFramework="net472" />
-  <package id="elasticsearch-inside" version="6.6.1" targetFramework="net472" />
+  <package id="ElasticsearchInside" version="7.1.2" targetFramework="net472" />
   <package id="Examine" version="1.0.1" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Legacy" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
   <package id="NEST" version="7.4.1" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
