--- a/source/Novicell.Examine.ElasticSearch/packages.config
+++ b/source/Novicell.Examine.ElasticSearch/packages.config
@@ -5,10 +5,14 @@
   <package id="ClientDependency-Mvc5" version="1.9.3" targetFramework="net472" />
   <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
   <package id="Elasticsearch.Net" version="7.4.1" targetFramework="net472" />
-  <package id="elasticsearch-inside" version="6.6.1" targetFramework="net472" />
+  <package id="ElasticsearchInside" version="7.1.2" targetFramework="net472" />
   <package id="Examine" version="1.0.1" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net472" />
   <package id="ImageProcessor" version="2.7.0.100" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Legacy" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="LightInject" version="5.4.0" targetFramework="net472" />
   <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
   <package id="LightInject.Mvc" version="2.0.0" targetFramework="net472" />
@@ -60,6 +64,6 @@
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
-  <package id="UmbracoCms.Core" version="8.4.0-rc" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.4.0" targetFramework="net472" />
   <package id="UmbracoCms.Web" version="8.4.0-rc" targetFramework="net472" />
 </packages>
