--- a/source/Novicell.Examine.ElasticSearch/packages.config
+++ b/source/Novicell.Examine.ElasticSearch/packages.config
@@ -65,5 +65,5 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
   <package id="UmbracoCms.Core" version="8.4.0" targetFramework="net472" />
-  <package id="UmbracoCms.Web" version="8.4.0-rc" targetFramework="net472" />
+  <package id="UmbracoCms.Web" version="8.4.0" targetFramework="net472" />
 </packages>
